// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomOperation transform Custom Mutation w Auth rules 1`] = `
"type Mutation {
  likePost(postId: String): Post @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform Custom Mutation w required arg and enum 1`] = `
"enum ReactionType {
  :shipit:
  :risitas:
}

type Mutation {
  likePost(postId: String!, reactionType: ReactionType): Post 
}"
`;

exports[`CustomOperation transform Custom Mutation w string function reference & auth 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform Custom Mutation w string function reference 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") 
}"
`;

exports[`CustomOperation transform Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model 
{
  id: ID! @primaryKey
  title: String
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

type Mutation {
  likePost(postId: String): Post 
}

type Query {
  getLikedPost: Post 
}

type Subscription {
  onLikePost: Post 
}"
`;
